--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/grid": "^6.0.0-4",
+    "final-form": "^4.10.0",
+    "lodash.get": "^4.4.2",
+    "moment": "^2.22.2",
+    "rc-slider": "^8.6.3",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dates": "^18.2.0",
+    "react-dom": "^16.6.0",
+    "react-final-form": "^3.6.7",
+    "styled-components": "^4.0.3"
   },
   "devDependencies": {
     "react-scripts": "2.1.1"
