--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dates": "^18.2.0",
     "react-dom": "^16.6.0",
     "react-final-form": "^3.6.7",
+    "recharts": "^1.3.5",
     "styled-components": "^4.0.3"
   },
   "devDependencies": {
